ajout du link sur foaf.rdf

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
+    <link rel="meta" type="application/rdf+xml" href="/foaf.rdf" />
 </head>
 <body>
+    <!--
     <form action="http://tplrnturcato.byethost17.com/foaf.rdf">
         <input type="submit" value="profile RDF" />
     </form> 
+-->
 </body>
 </html>
